fixed scrollbar

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -14,6 +14,20 @@ body {
   flex-direction: column;
 }
 
+html {
+  overflow: scroll;
+  overflow-x: hidden;
+}
+
+::-webkit-scrollbar {
+  width: 0px;
+  background: transparent;
+}
+
+::-webkit-scrollbar-thumb{
+  background: #FF0000;
+}
+
 .content {
   flex: 1;
 }
